# elephas

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  com.github.Elephas.json  meson.build  meson_install.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
data/: AboutDialog.ui.in  application.css  com.github.Elephas.desktop.in  com.github.Elephas.gresource.xml  com.github.Elephas.gschema.xml  headerbar.ui  meson.build  tootslist.ui  viewswitcher.ui
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
elephas/: __init__.py  app.py  main.py  meson.build  pkg_config.py.in  utils.py  window.py
elephas/widgets/: toolbar.py  toots_list.py
po/: meson.build
tests/: test_elephas.py
